src/ui/lidarr_ui/snapshots/managarr__ui__lidarr_ui__lidarr_ui_tests__tests__snapshot_tests__lidarr_tabs_Indexers.snap
---
source: src/ui/lidarr_ui/lidarr_ui_tests.rs
expression: output
---
╭  Artists  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Library │ Downloads │ History │ Root Folders │ Indexers                                                                                                           │
│───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│
│   Indexer                             RSS                   Automatic Search      Interactive Search   Priority              Tags                                 │
│=> Test Indexer                        Enabled               Enabled               Enabled              25                    alex                                 │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
