src/ui/lidarr_ui/snapshots/managarr__ui__lidarr_ui__lidarr_ui_tests__tests__snapshot_tests__lidarr_tabs_System.snap
---
source: src/ui/lidarr_ui/lidarr_ui_tests.rs
expression: output
---
╭  Artists  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Library │ Downloads │ Blocklist │ History │ Root Folders │ Indexers │ System                                                                                      │
│╭  Tasks  ───────────────────────────────────────────────────────────────────────╮╭  Queued Events  ──────────────────────────────────────────────────────────────╮│
││Name                   Interval           Last Execution      Next Execution    ││Trigger    Status      Name               Queued        Started     Duration   ││
││Backup                 1 hour             now                 59 minutes        ││manual     completed   Refresh Monitored  4 minutes ago 4 minutes a 00:03:03   ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
││                                                                                ││                                                                               ││
│╰────────────────────────────────────────────────────────────────────────────────╯╰───────────────────────────────────────────────────────────────────────────────╯│
│╭  Logs  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮│
││2025-12-16 16:40:59 UTC|INFO|ImportListSyncService|No list items to process                                                                                      ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
││                                                                                                                                                                 ││
│╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
